dmoz-0.1/textgarden/TextGardenLib/TextGardenLib.h


DLLExport void DelCStr(char* CStr);
DLLExport void SetVerbosity(int VerbosityLev);
DLLExport int GetVerbosity();
DLLExport int CStr_GetStrs();
DLLExport int CStr_GetStrV();
DLLExport int IntV_Gen();
DLLExport void IntV_Del(int IntVId);
DLLExport int IntV_GetLen(int IntVId);
DLLExport int IntV_AddVal(int IntVId, int Val);
DLLExport int IntV_GetVal(int IntVId, int ValN);
DLLExport void IntV_Sort(int IntVId, bool Asc);
DLLExport int IntV_Load(int SInId);
DLLExport void IntV_Save(int IntVId, int SOutId);
DLLExport int StrV_Gen();
DLLExport void StrV_Del(int StrVId);
DLLExport int StrV_GetLen(int StrVId);
DLLExport int StrV_AddVal(int StrVId, char* Val);
DLLExport char* StrV_GetVal(int StrVId, int ValN);
DLLExport void StrV_Sort(int StrVId, bool Asc);
DLLExport int StrV_Load(int SInId);
DLLExport void StrV_Save(int StrVId, int SOutId);
DLLExport int FSPrV_Gen();
DLLExport void FSPrV_Del(int FSPrVId);
DLLExport int FSPrV_GetLen(int FSPrVId);
DLLExport int FSPrV_AddVal(int FSPrVId, double Flt, char* Str);
DLLExport double FSPrV_GetFltVal(int FSPrVId, int ValN);
DLLExport char* FSPrV_GetStrVal(int FSPrVId, int ValN);
DLLExport void FSPrV_Sort(int FSPrVId, bool Asc);
DLLExport int FSPrV_GetTopVal(int FSPrVId, double WgtPrc, int MxVals, bool UseNegWgt);
DLLExport int FSPrV_Load(int SInId);
DLLExport void FSPrV_Save(int StrVId, int SOutId);
DLLExport int SIn_GenStdIn();
DLLExport int SIn_GenFileIn(char* FNm);
DLLExport int SIn_GenMemIn(int MemId);
DLLExport int SIn_GenStrIn(char* Str);
DLLExport void SIn_Del(int SInId);
DLLExport int SOut_GenStdOut();
DLLExport int SOut_GenFileOut(char* FNm, bool Append=false);
DLLExport int SOut_GenMemOut(int MemId);
DLLExport void SOut_Del(int SOutId);
DLLExport bool Conv_HtmlToCpd(
 char* InFPath, char* OutCpdFNm, bool RecurseDirP=false, int MxDocs=-1);
DLLExport bool Conv_Reuters21578ToCpd(
 char* InFPath, char* OutCpdFNm, int MxDocs=-1);
DLLExport bool Conv_Reuters2000ToCpd(
 char* InFPath, char* OutCpdFNm, int MxDocs=-1);
DLLExport bool Conv_AcmTechNewsToCpd(
 char* InFPath, char* OutCpdFNm, int MxDocs=-1);
DLLExport bool Conv_CiaWFBToCpd(
 char* InFPath, char* OutCpdFNm);
DLLExport bool Conv_CpdToLnDocTxt(char* InCpdFNm, char* OutLnDocFNm);
DLLExport bool Conv_HtmlToBow(
 char* InFPath, char* OutBowFNm,
 bool RecurseDirP, int Recs,
 char* SwSetTypeNm, char* StemmerTypeNm,
 int MxNGramLen, int MnNGramFq);
DLLExport bool Conv_CpdToBow(
 char* InCpdFNm, char* OutBowFNm,
 int Recs, char* SwSetTypeNm, char* StemmerTypeNm,
 int MxNGramLen, int MnNGramFq);
DLLExport int Conv_GetBowFromCpd(
 int CpdSInId,
 int Recs, char* SwSetTypeNm, char* StemmerTypeNm,
 int MxNGramLen, int MnNGramFq);
DLLExport bool Conv_LnDocToBow(
 char* InLnDocFNm, char* OutBowFNm,
 bool NamedP, int Recs,
 char* SwSetTypeNm, char* StemmerTypeNm,
 int MxNGramLen, int MnNGramFq);
DLLExport bool Conv_Reuters21578ToBow(
 char* InFPath, char* OutBowFNm,
 int Recs, char* SwSetTypeNm, char* StemmerTypeNm,
 int MxNGramLen, int MnNGramFq);
DLLExport bool Conv_CiaWFBToBow(
 char* InFPath, char* OutBowFNm,
 int Recs, char* SwSetTypeNm, char* StemmerTypeNm,
 int MxNGramLen, int MnNGramFq);
DLLExport int BowDocBs_New(char* SwSetTypeNm, char* StemmerTypeNm);
DLLExport int BowDocBs_Load(int SInId);
DLLExport void BowDocBs_Save(int BowDocBsId, int SOutId);
DLLExport int BowDocBs_LoadFromFile(char* FNm);
DLLExport void BowDocBs_SaveToFile(int BowDocBsId, char* FNm);
DLLExport void BowDocBs_SaveStatToFile(int BowDocBsId, char* FNm);
DLLExport void BowDocBs_Del(int BowDocBsId);
DLLExport int BowDocBs_GetWords(int BowDocBsId);
DLLExport bool BowDocBs_IsWordStr(int BowDocBsId, char* WordStr);
DLLExport int BowDocBs_GetWId(int BowDocBsId, char* WordStr);
DLLExport char* BowDocBs_GetWordStr(int BowDocBsId, int WId);
DLLExport int BowDocBs_GetCats(int BowDocBsId);
DLLExport bool BowDocBs_IsCatNm(int BowDocBsId, char* CatNm);
DLLExport int BowDocBs_GetCId(int BowDocBsId, char* CatNm);
DLLExport char* BowDocBs_GetCatNm(int BowDocBsId, int CId);
DLLExport int BowDocBs_AddHtmlDocStr(int BowDocBsId,
 char* DocNm, char* HtmlDocStr, char* CatNmVStr, bool SaveDocP=false);
DLLExport int BowDocBs_GetDocs(int BowDocBsId);
DLLExport bool BowDocBs_IsDocNm(int BowDocBsId, char* DocNm);
DLLExport int BowDocBs_GetDId(int BowDocBsId, char* DocNm);
DLLExport char* BowDocBs_GetDocNm(int BowDocBsId, int DId);
DLLExport int BowDocBs_GetDocWIds(int BowDocBsId, int DId);
DLLExport int BowDocBs_GetDocWId(int BowDocBsId, int DId, int DocWIdN);
DLLExport int BowDocBs_GetDocWIdN(int BowDocBsId, int DId, int DocWId);
DLLExport void BowDocBs_PutDocWFq(int BowDocBsId, int DId, int DocWIdN, double WFq);
DLLExport double BowDocBs_GetDocWFq(int BowDocBsId, int DId, int DocWIdN);
DLLExport int BowDocBs_GetDocCIds(int BowDocBsId, int DId);
DLLExport int BowDocBs_GetDocCId(int BowDocBsId, int DId, int DocCIdN);
DLLExport int BowDocWgtBs_Gen(int BowDocBsId);
DLLExport void BowDocWgtBs_Del(int BowDocWgtBsId);
DLLExport int BowDocWgtBs_GetDocs(int BowDocWgtBsId);
DLLExport int BowDocWgtBs_GetDocId(int BowDocWgtBsId, int DIdN);
DLLExport int BowDocWgtBs_GetDocWIds(int BowDocWgtBsId, int DId);
DLLExport int BowDocWgtBs_GetDocWId(int BowDocWgtBsId, int DId, int DocWIdN);
DLLExport double BowDocWgtBs_GetDocWWgt(int BowDocWgtBsId, int DId, int DocWIdN);
DLLExport int BowDocWgtBs_GetWgtWordPrV(
 int BowDocWgtBsId, int BowDocBsId, int DId,
 int TopWords, double TopWordsWgtPrc);