dmoz-0.1/textgarden/TextGardenLib/NetTextGardenLib.cs

using System;                         
using System.Collections.Generic;     
using System.Text;                    
using System.Runtime.InteropServices; 

namespace NetTextGardenLib
{                                     
   public class TextGardenLib
   {                                  
      private class HTextGardenLib
      {                               
         [DllImport("TextGardenLib.dll")]
         public static extern void DelCStr(IntPtr CStr);

         [DllImport("TextGardenLib.dll")]
         public static extern void SetVerbosity(int VerbosityLev);

         [DllImport("TextGardenLib.dll")]
         public static extern int GetVerbosity();

         [DllImport("TextGardenLib.dll")]
         public static extern int CStr_GetStrs();

         [DllImport("TextGardenLib.dll")]
         public static extern int CStr_GetStrV();

         [DllImport("TextGardenLib.dll")]
         public static extern int IntV_Gen();

         [DllImport("TextGardenLib.dll")]
         public static extern void IntV_Del(int IntVId);

         [DllImport("TextGardenLib.dll")]
         public static extern int IntV_GetLen(int IntVId);

         [DllImport("TextGardenLib.dll")]
         public static extern int IntV_AddVal(int IntVId, int Val);

         [DllImport("TextGardenLib.dll")]
         public static extern int IntV_GetVal(int IntVId, int ValN);

         [DllImport("TextGardenLib.dll")]
         public static extern void IntV_Sort(int IntVId, bool Asc);

         [DllImport("TextGardenLib.dll")]
         public static extern int IntV_Load(int SInId);

         [DllImport("TextGardenLib.dll")]
         public static extern void IntV_Save(int IntVId, int SOutId);

         [DllImport("TextGardenLib.dll")]
         public static extern int StrV_Gen();

         [DllImport("TextGardenLib.dll")]
         public static extern void StrV_Del(int StrVId);

         [DllImport("TextGardenLib.dll")]
         public static extern int StrV_GetLen(int StrVId);

         [DllImport("TextGardenLib.dll")]
         public static extern int StrV_AddVal(int StrVId, String Val);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr StrV_GetVal(int StrVId, int ValN);

         [DllImport("TextGardenLib.dll")]
         public static extern void StrV_Sort(int StrVId, bool Asc);

         [DllImport("TextGardenLib.dll")]
         public static extern int StrV_Load(int SInId);

         [DllImport("TextGardenLib.dll")]
         public static extern void StrV_Save(int StrVId, int SOutId);

         [DllImport("TextGardenLib.dll")]
         public static extern int FSPrV_Gen();

         [DllImport("TextGardenLib.dll")]
         public static extern void FSPrV_Del(int FSPrVId);

         [DllImport("TextGardenLib.dll")]
         public static extern int FSPrV_GetLen(int FSPrVId);

         [DllImport("TextGardenLib.dll")]
         public static extern int FSPrV_AddVal(int FSPrVId, double Flt, String Str);

         [DllImport("TextGardenLib.dll")]
         public static extern double FSPrV_GetFltVal(int FSPrVId, int ValN);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr FSPrV_GetStrVal(int FSPrVId, int ValN);

         [DllImport("TextGardenLib.dll")]
         public static extern void FSPrV_Sort(int FSPrVId, bool Asc);

         [DllImport("TextGardenLib.dll")]
         public static extern int FSPrV_GetTopVal(int FSPrVId, double WgtPrc, int MxVals, bool UseNegWgt);

         [DllImport("TextGardenLib.dll")]
         public static extern int FSPrV_Load(int SInId);

         [DllImport("TextGardenLib.dll")]
         public static extern void FSPrV_Save(int StrVId, int SOutId);

         [DllImport("TextGardenLib.dll")]
         public static extern int SIn_GenStdIn();

         [DllImport("TextGardenLib.dll")]
         public static extern int SIn_GenFileIn(String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern int SIn_GenMemIn(int MemId);

         [DllImport("TextGardenLib.dll")]
         public static extern int SIn_GenStrIn(String Str);

         [DllImport("TextGardenLib.dll")]
         public static extern void SIn_Del(int SInId);

         [DllImport("TextGardenLib.dll")]
         public static extern int SOut_GenStdOut();

         [DllImport("TextGardenLib.dll")]
         public static extern int SOut_GenFileOut(String FNm, bool Append);

         [DllImport("TextGardenLib.dll")]
         public static extern int SOut_GenMemOut(int MemId);

         [DllImport("TextGardenLib.dll")]
         public static extern void SOut_Del(int SOutId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Conv_HtmlToCpd(String InFPath, String OutCpdFNm, bool RecurseDirP, int MxDocs);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Conv_Reuters21578ToCpd(String InFPath, String OutCpdFNm, int MxDocs);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Conv_Reuters2000ToCpd(String InFPath, String OutCpdFNm, int MxDocs);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Conv_AcmTechNewsToCpd(String InFPath, String OutCpdFNm, int MxDocs);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Conv_CiaWFBToCpd(String InFPath, String OutCpdFNm);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Conv_CpdToLnDocTxt(String InCpdFNm, String OutLnDocFNm);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Conv_HtmlToBow(String InFPath, String OutBowFNm, bool RecurseDirP, int Recs, String SwSetTypeNm, String StemmerTypeNm, int MxNGramLen, int MnNGramFq);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Conv_CpdToBow(String InCpdFNm, String OutBowFNm, int Recs, String SwSetTypeNm, String StemmerTypeNm, int MxNGramLen, int MnNGramFq);

         [DllImport("TextGardenLib.dll")]
         public static extern int Conv_GetBowFromCpd(int CpdSInId, int Recs, String SwSetTypeNm, String StemmerTypeNm, int MxNGramLen, int MnNGramFq);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Conv_LnDocToBow(String InLnDocFNm, String OutBowFNm, bool NamedP, int Recs, String SwSetTypeNm, String StemmerTypeNm, int MxNGramLen, int MnNGramFq);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Conv_Reuters21578ToBow(String InFPath, String OutBowFNm, int Recs, String SwSetTypeNm, String StemmerTypeNm, int MxNGramLen, int MnNGramFq);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool Conv_CiaWFBToBow(String InFPath, String OutBowFNm, int Recs, String SwSetTypeNm, String StemmerTypeNm, int MxNGramLen, int MnNGramFq);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_New(String SwSetTypeNm, String StemmerTypeNm);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_Load(int SInId);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowDocBs_Save(int BowDocBsId, int SOutId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_LoadFromFile(String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowDocBs_SaveToFile(int BowDocBsId, String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowDocBs_SaveStatToFile(int BowDocBsId, String FNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowDocBs_Del(int BowDocBsId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_GetWords(int BowDocBsId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool BowDocBs_IsWordStr(int BowDocBsId, String WordStr);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_GetWId(int BowDocBsId, String WordStr);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr BowDocBs_GetWordStr(int BowDocBsId, int WId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_GetCats(int BowDocBsId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool BowDocBs_IsCatNm(int BowDocBsId, String CatNm);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_GetCId(int BowDocBsId, String CatNm);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr BowDocBs_GetCatNm(int BowDocBsId, int CId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_AddHtmlDocStr(int BowDocBsId, String DocNm, String HtmlDocStr, String CatNmVStr, bool SaveDocP);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_GetDocs(int BowDocBsId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool BowDocBs_IsDocNm(int BowDocBsId, String DocNm);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_GetDId(int BowDocBsId, String DocNm);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr BowDocBs_GetDocNm(int BowDocBsId, int DId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_GetDocWIds(int BowDocBsId, int DId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_GetDocWId(int BowDocBsId, int DId, int DocWIdN);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_GetDocWIdN(int BowDocBsId, int DId, int DocWId);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowDocBs_PutDocWFq(int BowDocBsId, int DId, int DocWIdN, double WFq);

         [DllImport("TextGardenLib.dll")]
         public static extern double BowDocBs_GetDocWFq(int BowDocBsId, int DId, int DocWIdN);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_GetDocCIds(int BowDocBsId, int DId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocBs_GetDocCId(int BowDocBsId, int DId, int DocCIdN);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocWgtBs_Gen(int BowDocBsId);

         [DllImport("TextGardenLib.dll")]
         public static extern void BowDocWgtBs_Del(int BowDocWgtBsId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocWgtBs_GetDocs(int BowDocWgtBsId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocWgtBs_GetDocId(int BowDocWgtBsId, int DIdN);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocWgtBs_GetDocWIds(int BowDocWgtBsId, int DId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocWgtBs_GetDocWId(int BowDocWgtBsId, int DId, int DocWIdN);

         [DllImport("TextGardenLib.dll")]
         public static extern double BowDocWgtBs_GetDocWWgt(int BowDocWgtBsId, int DId, int DocWIdN);

         [DllImport("TextGardenLib.dll")]
         public static extern int BowDocWgtBs_GetWgtWordPrV(int BowDocWgtBsId, int BowDocBsId, int DId, int TopWords, double TopWordsWgtPrc);
